--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -19,6 +19,7 @@
 = Working and ready to deploy =
   * Bolsover
   * Doncaster
+  * Dundee
   * North West Leicestershire
   * Redditch
   * Stirling
