--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -10,12 +10,13 @@
   * Hambleton (Duncan) - works for browser - empty results for script
   * Hinckley-Bosworth (Duncan) - uses https
   * Manchester (Duncan) - site is missing main menu on left
+  * Moray (Duncan) - causes an error in my script
   * Newcastle (Duncan) - works in browser - empty results for script
   * Perthshire (Duncan) - causes an error in my parser
   * Selby (Duncan) - works in browser - empty results for script
   * Watford (Duncan) - site is broken
   * West Oxfordshire (Duncan) - not working yet
-  * Edinburgh (sie has data, but scraper doesnt find it)
+  * Edinburgh (site has data, but scraper doesn't find it)
 
 = Working and ready to deploy =
   * Broxbourne (missing perl module on server)
