Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -27,6 +27,7 @@
   * Newcastle-under-Lyme
   * Vale Royal
   * Winchester
+  * Epsom and Ewell Borough Council
 
 = Scrapes done, but sites broken =
   * Doncaster (site down when attempted to test?)
