Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -41,3 +41,4 @@
   * East Devon (Db Empty?)
   * Northumberland (Db Empty)
   * Wolverhampton (empty database)
+  * Bromley (their site is totally nacked)
